--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Bhavani Sai Narayana P</title>
+	<title>Bhavani Sai Narayana Pottipothula</title>
 	<meta charset="utf-8" />
 	<link rel="icon" type="image/png" href="images/logo.png" /> 
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
