--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Bhavani Sai Narayana P</title>
+    <title>Bhavani Sai Narayana Pottipothula</title>
     <!--<link rel="icon" type="image/png" href="images/logo.png"/> -->
     <style>
         body {
