--- a/home.html
+++ b/home.html
@@ -53,11 +53,11 @@
 			<div class="content">
 				<div class="inner">
 					<h1>Bhavani Sai Narayana P</h1>
-					<p>Masters Student at <a href="https://www.asu.edu/">Arizona State University</a> with close to
+					<p>Masters Student at <a href="https://www.asu.edu/">Arizona State University</a> with close nearly
 						<br />
-						2 years of experience as a software developer and SDE Intern at <a
-							href="https://group.bnpparibas/en/">BNP Paribas</a> and <a href="https://www.highradius.com/">HighRadius</a>
-						respectively.</p><br />
+						2 years of software development experience, including roles as a Software Developer at <a
+							href="https://group.bnpparibas/en/">BNP Paribas</a> and as an SDE Intern at <a href="https://www.highradius.com/">HighRadius</a>
+						</p><br />
 					<p>Additionally, worked as a Research Assistant at <a href="https://www.srmist.edu.in/">SRM University</a> contributing to Open Source projects.</p>
 					<a href="https://www.linkedin.com/in/bhavanipottipothula/" class="icon brands fa-linkedin"><span
 							class="label">LinkedIn</span></a>
