--- a/home.html
+++ b/home.html
@@ -216,10 +216,6 @@
 								<i class="techicon fas fa-cloud"></i>
 								<div>Cloud Computing</div>
 							</div>
-							<!-- <div style="margin: 5px;">
-								<i class="techicon fas fa-snowflake"></i>
-								<div>Snowflake</div>
-							</div> -->
 							<div style="margin: 5px;">
 								<i class="techicon fas fa-chart-line"></i>
 								<div>Tableau</div>
@@ -249,17 +245,20 @@
 			<article id="intro">
 				<h2 class="major">Me !!</h2>
 				<span class="image main"><img src="images/b.png" alt="" /></span>
-				<p>Willing to learn from and explore, new and interesting opportunities.</p>
-				<p>Hello, I’m Bhavani! A hardworking and enthusiastic Information Technology student at the Arizona State University
-					I believe in my problem solving capabilities and am a great team player. I am confident
-					that I can make a lasting impact in software engineering roles with my creative ideas and ability to
-					share them with others.</p>
+				<p>Willing to learn, grow, and explore new opportunities.</p>
+				<p>Hello, I’m Bhavani! I’m a dedicated and enthusiastic Information Technology student at Arizona State University, 
+					passionate about solving problems and building impactful tech solutions. With a curious mind and a collaborative 
+					spirit, I enjoy working in teams where ideas flow freely and challenges are tackled together.
+				</p>
 				<p>
-					Do check out my <a href="https://www.linkedin.com/in/bhavanipottipothula/">LinkedIn</a> profile and let me
-					know how I can help you out.</p>
+					I believe that creativity, consistency, and communication are key to great software development. 
+					Whether I’m working on backend systems or designing clean user interfaces, I always aim to bring value and clarity to 
+					whatever I build.
+				</p>
 				<p>
-					I look forward to connecting and working together to create something and seeing a lot of people
-					benefit from it!</p>
+					Feel free to check out my <a href="https://www.linkedin.com/in/bhavanipottipothula/">LinkedIn</a> and connect! 
+					I’m always open to meaningful conversations, opportunities to collaborate, and ways I can contribute.
+				</p>
 			</article>
 
 			<!-- Work -->
@@ -283,15 +282,14 @@
 			<article id="about">
 				<h2 class="major">About</h2>
 				<span class="image main"><img src="images/pic11.png" alt="" /></span>
-				<p>I hold a Bachelor's degree in Computer Science and Engineering with a specialization in Cloud Computing from SRM Institute of Science and Technology. 
-					After graduation, I worked as an Associate Software Engineer at BNP Paribas, where I contributed to modernizing a legacy banking system by developing 
-					scalable Spring Boot microservices, optimizing SQL queries for performance, and implementing secure AWS-based storage solutions using S3, IAM roles, 
-					and MFA. Prior to that, I completed an internship at HighRadius, where I developed frontend components for an invoice management system using React.
+				<p>I’m currently pursuing a Master’s degree in Information Technology at Arizona State University, focusing on full-stack development and 
+				   cloud computing. My academic journey is backed by nearly two years of hands-on industry experience, including roles as an Associate Software 
+				   Engineer at BNP Paribas and an SDE Intern at HighRadius.
 				</p>
 				<p>
-					Currently, I’m pursuing my Master’s in Information Technology at Arizona State University, where I continue to strengthen my foundation in full-stack development 
-					and cloud computing. Through both academic and professional experiences, I’ve gained hands-on expertise with Java, React, AWS, and Agile methodologies, 
-					and I’m actively working on projects that reflect my passion for building secure, scalable applications.
+					At BNP Paribas, I helped modernize a legacy banking platform by building scalable Spring Boot microservices, optimizing SQL 
+					queries, and integrating secure AWS-based storage using S3, IAM roles, and MFA. Earlier at HighRadius, I developed responsive 
+					frontend components using React for an invoice management system. I hold a Bachelor's degree in Computer Science and Engineering with a specialization in Cloud Computing from SRM Institute of Science and Technology. My skill set includes Java, React, AWS, and Agile practices, and I’m passionate about building secure and scalable applications.
 				</p>
 			</article>
 
