--- a/home.html
+++ b/home.html
@@ -53,7 +53,7 @@
 			<div class="content">
 				<div class="inner">
 					<h1>Bhavani Sai Narayana P</h1>
-					<p>Masters Student at <a href="https://www.asu.edu/">Arizona State University</a> with close nearly
+					<p>Masters Student at <a href="https://www.asu.edu/">Arizona State University</a> with nearly
 						<br />
 						2 years of software development experience, including roles as a Software Developer at <a
 							href="https://group.bnpparibas/en/">BNP Paribas</a> and as an SDE Intern at <a href="https://www.highradius.com/">HighRadius</a>
