--- a/home.html
+++ b/home.html
@@ -264,7 +264,7 @@
 			<!-- Work -->
 			<article id="work">
 				<h2 class="major">Work</h2>
-				<span class="image main"><img src="images/Logohandler.png" alt="" /></span> 
+				<span class="image main"><img src="images/LogoHandler.png" alt="" /></span> 
 				<p>Role: Full Stack Developer</p>
 				<p>Tech Stack: Java, Spring Boot, REST APIs, MySQL, JavaScript, React.js, Git, AWS.</p>
 				<p>Work Summary: Developed and deployed scalable microservices, built responsive React.js 
