--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Bhavani Sai Narayana Pottipothula</title>
 	<meta charset="utf-8" />
-	<link rel="icon" type="image/png" href="images/logo.png" /> 
+	<!-- <link rel="icon" type="image/png" href="images/logo.png" /> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
@@ -48,7 +48,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="logo">
-				<span><img height="100%" src="images/logo.png" alt="A" /></span>
+				<span style="display: inline-block; height: 100%;"></span>
 			</div>
 			<div class="content">
 				<div class="inner">
