--- a/home.html
+++ b/home.html
@@ -53,12 +53,12 @@
 			<div class="content">
 				<div class="inner">
 					<h1>Bhavani Sai Narayana P</h1>
-					<p>Masters Student at <a href="https://www.asu.edu/">Arizona State University</a> with nearly
+					<p>Masters Student at <a href="https://www.asu.edu/">Arizona State University</a> with 
 						<br />
-						2 years of software development experience, including roles as a Software Developer at <a
-							href="https://group.bnpparibas/en/">BNP Paribas</a> and as an SDE Intern at <a href="https://www.highradius.com/">HighRadius</a>
+						2+ years of software development experience, including roles as a Software Developer at <a
+							href="https://group.bnpparibas/en/">BNP Paribas</a>, SDE Intern at <a href="https://www.highradius.com/">HighRadius</a> and Research Project Intern at <a href="https://research.samsung.com/sri-b">Samsung R&D Institute.</a>
 						</p><br />
-					<p>Additionally, worked as a Research Assistant at <a href="https://www.srmist.edu.in/">SRM University</a> contributing to Open Source projects.</p>
+					<p>Additionally, worked as a Committee Member at <a href="https://www.aaruush.org/">Aarush</a> contributing to Workshops & Events.</p>
 					<a href="https://www.linkedin.com/in/bhavanipottipothula/" class="icon brands fa-linkedin"><span
 							class="label">LinkedIn</span></a>
 					<a href="mailto: pbsn99@gmail.com" class="icon fa-envelope"><span class="label">Mail</span></a>
