--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
 		<!-- Header -->
 		<header id="header">
 			<div class="logo">
-				<span style="display: inline-block; height: 100%;"></span>
+				<span><img height="100%" src="images/logocopy.png" alt="__" /></span>
 			</div>
 			<div class="content">
 				<div class="inner">
