--- a/home.html
+++ b/home.html
@@ -110,8 +110,8 @@
 										<td>Java, Spring Boot, REST APIs, React.js, HTML5, CSS3, Git, MySQL										</td>
 									</tr>
 									<tr>
-										<td>Student Research Assistant - Volunteer</td>
-										<td>SRM University</td>
+										<td>Research Project Intern</td>
+										<td>Samsung R&D Institute</td>
 										<td>Assisted in developing a secure file sharing prototype by researching cloud storage techniques and implementing a basic frontend dashboard.</td>
 										<td>React.js, JavaScript, HTML5, AWS S3, CloudWatch, Git</td>
 									</tr>
@@ -272,6 +272,13 @@
 				</p>
 				<span class="image main"><img src="images/images.png" alt="" /></span>
 				<p>Role: Software Engineer Inern</p>
+				<p>Tech Stack: React.js, JavaScript, HTML5, CSS3, Git</p>
+				<p>Work Summary: Built and optimized interactive frontend components for an invoice management 
+					system, enhanced UI responsiveness, collaborated in Agile sprints, and managed code using Git.
+				</p>
+				</p>
+				<span class="image main"><img src="images/cd.png" alt="" /></span>
+				<p>Role: Research Project Intern</p>
 				<p>Tech Stack: React.js, JavaScript, HTML5, CSS3, Git</p>
 				<p>Work Summary: Built and optimized interactive frontend components for an invoice management 
 					system, enhanced UI responsiveness, collaborated in Agile sprints, and managed code using Git.
