--- a/home.html
+++ b/home.html
@@ -277,7 +277,7 @@
 					system, enhanced UI responsiveness, collaborated in Agile sprints, and managed code using Git.
 				</p>
 				</p>
-				<span class="image main"><img src="images/cd.png" alt="" /></span>
+				<span class="image main"><img src="images/cd.jpg" alt="" /></span>
 				<p>Role: Research Project Intern</p>
 				<p>Tech Stack: React.js, JavaScript, HTML5, CSS3, Git</p>
 				<p>Work Summary: Built and optimized interactive frontend components for an invoice management 
