--- a/home.html
+++ b/home.html
@@ -64,7 +64,7 @@
 					<a href="mailto: pbsn99@gmail.com" class="icon fa-envelope"><span class="label">Mail</span></a>
 					<a href="https://www.credly.com/users/p-b-s-narayana.cdf20d30/edit" class="icon fa-user"><span
 							class="label">Credly</span></a> <br>
-					<a href="./Bhavani_Resume.pdf" download="Bhavani_CV.pdf">DOWNLOAD MY CV</a>
+					<a href="./Bhavani_Resume.pdf" download="Bhavani_Resume.pdf">DOWNLOAD MY CV</a>
 				</div>
 			</div>
 			<nav>
