--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
 					<p>Masters Student at <a href="https://www.asu.edu/">Arizona State University</a> with 
 						<br />
 						2+ years of software development experience, including roles as a Software Developer at <a
-							href="https://group.bnpparibas/en/">BNP Paribas</a>, Software Engineer Inern at <a href="https://www.highradius.com/">HighRadius</a> and Research Project Intern at <a href="https://research.samsung.com/sri-b">Samsung R&D Institute.</a>
+							href="https://group.bnpparibas/en/">BNP Paribas</a>, Software Engineer Intern at <a href="https://www.highradius.com/">HighRadius</a> and Research Project Intern at <a href="https://research.samsung.com/sri-b">Samsung R&D Institute.</a>
 						</p><br />
 					<p>Additionally, worked as a Committee Member at <a href="https://www.aaruush.org/">Aarush</a> contributing to Workshops & Events.</p>
 					<a href="https://www.linkedin.com/in/bhavanipottipothula/" class="icon brands fa-linkedin"><span
@@ -269,7 +269,7 @@
 				<span class="image main"><img src="images/LogoHandler.png" alt="" /></span> 
 				<p>Role: Full Stack Developer</p>
 				<span class="image main"><img src="images/images.png" alt="" /></span>
-				<p>Role: Software Engineer Inern</p>
+				<p>Role: Software Engineer Intern</p>
 				<span class="image main"><img src="images/cd.png" alt="" /></span>
 				<p>Role: Research Project Intern</p>
 			</article>
