--- a/home.html
+++ b/home.html
@@ -156,10 +156,6 @@
 								<i class="techicon fab fa-java"></i>
 								<div>Java</div>
 							</div>
-							<div style="margin: 5px;">
-								<i class="techicon fas fa-code"></i>
-								<div>Typescript</div>
-							</div>
 						</div>
 					</div>
 
@@ -171,17 +167,9 @@
 								<div>React</div>
 							</div>
 							<div style="margin: 5px;">
-								<i class="techicon fab fa-node-js"></i>
-								<div>Node.js</div>
-							</div>
-							<div style="margin: 5px;">
 								<i class="techicon fas fa-leaf"></i>
 								<div>Spring Boot</div>
 							</div>							
-							<div style="margin: 5px;">
-								<i class="techicon fas fa-code"></i>
-								<div>Flask</div>
-							</div>
 							<div style="margin: 5px;">
 								<i class="techicon fab fa-aws"></i>
 								<div>AWS</div>
@@ -194,6 +182,16 @@
 								<i class="techicon fas fa-database"></i>
 								<div>SQL</div>
 							</div>
+							<div style="margin: 5px;">
+  								<i class="techicon fas fa-code-branch"></i>
+  								<div>Terraform</div>
+							</div>
+							<div style="margin: 5px;">
+  								<i class="techicon fas fa-sync-alt"></i>
+ 								<div>CI/CD</div>
+							</div>
+
+
 						</div>
 					</div>
 
@@ -215,12 +213,12 @@
 								<div>Jira</div>
 							</div>
 							<div style="margin: 5px;">
-								<i class="techicon fas fa-cloud"></i>
-								<div>Cloud Computing</div>
+  								<i class="techicon fas fa-code"></i>
+  								<div>VS Code</div>
 							</div>
 							<div style="margin: 5px;">
-								<i class="techicon fas fa-chart-line"></i>
-								<div>Tableau</div>
+  								<i class="techicon fas fa-lightbulb"></i>
+  								<div>IntelliJ</div>
 							</div>
 							<div style="margin: 5px;">
 								<i class="techicon fas fa-laptop-code"></i>
