--- a/home.html
+++ b/home.html
@@ -209,6 +209,10 @@
 								<div>Github</div>
 							</div>
 							<div style="margin: 5px;">
+  								<i class="techicon fas fa-cogs"></i>
+  								<div>Maven</div>
+							</div>
+							<div style="margin: 5px;">
 								<i class="techicon fab fa-jira"></i>
 								<div>Jira</div>
 							</div>
