--- a/home.html
+++ b/home.html
@@ -160,7 +160,7 @@
 					</div>
 
 					<div style="text-align: center; margin: 10px;">
-						<h3>Frameworks/Libraries</h3>
+						<h3>Frontend/Backend Frameworks</h3>
 						<div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px;">
 							<div style="margin: 5px;">
 								<i class="techicon fab fa-react"></i>
@@ -169,14 +169,32 @@
 							<div style="margin: 5px;">
 								<i class="techicon fas fa-leaf"></i>
 								<div>Spring Boot</div>
-							</div>							
+							</div>	
 							<div style="margin: 5px;">
-								<i class="techicon fab fa-aws"></i>
-								<div>AWS</div>
+  								<i class="techicon fas fa-cogs"></i>
+  								<div>Maven</div>
 							</div>
 							<div style="margin: 5px;">
 								<i class="techicon fas fa-database"></i>
 								<div>SQL</div>
+							</div>
+							<div style="margin: 5px;">
+								<i class="techicon fas fa-laptop-code"></i>
+								<div>Postman</div>
+							</div>
+						</div>
+					</div>
+
+					<div style="text-align: center; margin: 10px;">
+						<h3>DevOps/Cloud</h3>
+						<div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 10px;">
+							<div style="margin: 5px;">
+								<i class="techicon fab fa-docker"></i>
+								<div>Docker</div>
+							</div>
+							<div style="margin: 5px;">
+								<i class="techicon fab fa-aws"></i>
+								<div>AWS</div>
 							</div>
 							<div style="margin: 5px;">
   								<i class="techicon fas fa-code-branch"></i>
@@ -186,8 +204,6 @@
   								<i class="techicon fas fa-sync-alt"></i>
  								<div>CI/CD</div>
 							</div>
-
-
 						</div>
 					</div>
 
@@ -205,14 +221,6 @@
 								<div>Github</div>
 							</div>
 							<div style="margin: 5px;">
-								<i class="techicon fab fa-docker"></i>
-								<div>Docker</div>
-							</div>
-							<div style="margin: 5px;">
-  								<i class="techicon fas fa-cogs"></i>
-  								<div>Maven</div>
-							</div>
-							<div style="margin: 5px;">
 								<i class="techicon fab fa-jira"></i>
 								<div>Jira</div>
 							</div>
@@ -223,10 +231,6 @@
 							<div style="margin: 5px;">
   								<i class="techicon fas fa-lightbulb"></i>
   								<div>IntelliJ</div>
-							</div>
-							<div style="margin: 5px;">
-								<i class="techicon fas fa-laptop-code"></i>
-								<div>Postman</div>
 							</div>
 						</div>
 					</div>
